# api/src/users/users.controller.ts
@@ -2,7 +2,10 @@ import {
   Body,
   Controller,
   Get,
+  Param,
   Post,
+  Put,
+  Query,
   Req,
   Res,
   UseGuards,
@@ -11,28 +14,18 @@ import {
 import { AuthGuard } from '@nestjs/passport';
 import { Response } from 'express';
 import { CurrentUser } from 'src/models/current.user';
-import { RegistRespModel } from './models/regist.resp.model';
+import { StoreRespModel } from './models/store.resp.model';
 import { LoginRespModel } from './models/login.resp.model';
 import { LogoutRespModel } from './models/logout.resp.model';
 import { ProfileRespModel } from './models/profile.resp.model';
 import { RefreshTokenRespModel } from './models/refresh-token.resp.model';
 import { UsersService } from './users.service';
-import { RegistUserDTO } from './users.dto';
+import { StoreDTO } from './dto/store.dto';
+import { UpdateDTO } from './dto/update.dto';
 
 @Controller('users')
 export class UsersController {
   constructor(private userService: UsersService) {}
-
-  @Post('regist')
-  async registerUser(
-    @Body() registUserDTO: RegistUserDTO,
-  ): Promise<RegistRespModel> {
-    try {
-      return await this.userService.registerUser(registUserDTO);
-    } catch (e) {
-      throw new InternalServerErrorException();
-    }
-  }
 
   @Post('login')
   @UseGuards(AuthGuard('local-user'))
@@ -68,7 +61,7 @@ export class UsersController {
 
   @Get('profile')
   @UseGuards(AuthGuard('jwt-user'))
-  getProfile(@Req() req: { user }): ProfileRespModel {
+  findOne(@Req() req: { user }): ProfileRespModel {
     return { statusCode: 200, message: 'success', data: req.user };
   }
 
@@ -87,5 +80,47 @@ export class UsersController {
 
     res.cookie('auth-cookie-user', secretData, { httpOnly: true });
     return { statusCode: 200, message: 'success' };
+  }
+
+  //------------------------------------------------------------------------------
+
+  @Get()
+  @UseGuards(AuthGuard('jwt-adminer'))
+  async index(@Query() query: { name?: string }) {
+    try {
+      return await this.userService.findAll(query);
+    } catch (e) {
+      throw new InternalServerErrorException();
+    }
+  }
+
+  @Get('/:id')
+  @UseGuards(AuthGuard('jwt-adminer'))
+  async show(@Param() params: { id: string }) {
+    try {
+      return await this.userService.findOne({ id: params.id });
+    } catch (e) {
+      throw new InternalServerErrorException();
+    }
+  }
+
+  @Post()
+  @UseGuards(AuthGuard('jwt-adminer'))
+  async store(@Body() storeDTO: StoreDTO): Promise<StoreRespModel> {
+    try {
+      return await this.userService.store(storeDTO);
+    } catch (e) {
+      throw new InternalServerErrorException();
+    }
+  }
+
+  @Put('/:id')
+  @UseGuards(AuthGuard('jwt-adminer'))
+  async update(@Param() params: { id: number }, @Body() updateDTO: UpdateDTO) {
+    try {
+      return await this.userService.update(params.id, updateDTO);
+    } catch (e) {
+      throw new InternalServerErrorException();
+    }
   }
 }
